# Alt-F5-Monorepo

./: README.md  eslint.config.mjs  package.json
backend/: .gitignore  DocEmbedding.ipynb  README copy.md  README.md  main.py  model.py  pyproject.toml  requirements.txt  test.ipynb  test.py
backend/dependencies/: aimodel.py  dbschema.py  embeddings.py  mongoclient.py  pconeclient.py
src/app/: layout.tsx  page.tsx
src/app/insight/: layout.tsx  page.tsx
src/app/sign-in/[[...sign-in]]/: layout.tsx
src/components/blocks/: docblock.tsx  search-bar.tsx  zone.tsx
