[project]
name = "alt-f4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.11",
    "motor>=3.7.0",
    "pinecone>=6.0.1",
    "pymongo[srv]>=4.11.2",
    "python-dotenv>=1.0.1",
    "uuid>=1.30",
]
