[project]
name = "alt-f4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.11",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langchain-mistralai>=0.2.7",
    "langgraph>=0.3.5",
    "motor>=3.7.0",
    "pinecone>=6.0.1",
    "pymongo[srv]>=4.11.2",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=3.4.1",
    "tiktoken>=0.9.0",
    "uuid>=1.30",
]
